Always copy app.config and chromedriver to output

--- a/SiteFunctionalTests/UserAcceptanceTests/artifacts.html
+++ b/SiteFunctionalTests/UserAcceptanceTests/artifacts.html
@@ -11,7 +11,7 @@
 
 <body>
 <ul class="collapsible" data-collapsible="expandable">
-    <li><div class="collapsible-header green lighten-2 test-header-passed">Can_fill_out_contact_form</div></li><li><div class="collapsible-header green lighten-2 test-header-passed">Cannot_leave_contact_form_empty</div></li><li><div class="collapsible-header green lighten-2 test-header-passed">Cannot_leave_out_email_address_in_contact_form</div></li><li><div class="collapsible-header green lighten-2 test-header-passed">Cannot_leave_out_first_name_in_contact_form</div></li><li><div class="collapsible-header green lighten-2 test-header-passed">Cannot_leave_out_last_name_in_contact_form</div></li><li><div class="collapsible-header green lighten-2 test-header-passed">Main_image_is_present</div></li><li><div class="collapsible-header green lighten-2 test-header-passed">Name_links_to_home_page</div></li><li><div class="collapsible-header green lighten-2 test-header-passed">Page_location_is_correct</div></li><li><div class="collapsible-header green lighten-2 test-header-passed">Title_is_correct</div></li>
+    <li><div class="collapsible-header green lighten-2 test-header-passed">Main_image_is_present</div></li>
 </ul>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
