--- a/SiteFunctionalTests/UserAcceptanceTests/artifacts.html
+++ b/SiteFunctionalTests/UserAcceptanceTests/artifacts.html
@@ -11,7 +11,7 @@
 
 <body>
 <ul class="collapsible" data-collapsible="expandable">
-    <li><div class="collapsible-header green lighten-2 test-header-passed">Can_fill_out_contact_form</div></li>
+    <li><div class="collapsible-header green lighten-2 test-header-passed">Title_is_correct</div></li>
 </ul>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
